--- a/agileprinciples-app/public/index.html
+++ b/agileprinciples-app/public/index.html
@@ -14,5 +14,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script rel="text/javascript" src="https://rawgit.com/Wlada/vue-carousel-3d/master/dist/vue-carousel-3d.min.js"></script>
   </body>
 </html>
